--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -35,5 +35,5 @@ import { ViewTransitions } from "astro:transitions";
   <meta property="twitter:image" content="/assets/img/logos/logo-name-bottom-min-transparent.png" />
   <title>{title}</title>
 
-  <ViewTransitions />
+  <ViewTransitions fallback='none' />
 </head>
