--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,7 +4,7 @@ import { navData } from "../data/navdata";
 import Link from "./Link.astro";
 ---
 
-<div id="content-wrap" class="px-1 pb-10">
+<div id="content-wrap" class="px-1 pb-10" transition:name="nav">
     <div class="block mr-auto ml-1 h-auto font-sans text-xl font-normal">
       <Link href="/" text="&lt;/Lerndmina.Dev&gt;" extraclasses="from-gradient1 to-gradient2 font-bold"/>
     </div>
