--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection, CollectionEntry } from "astro:content";
-import { Image } from "@astrojs/image/components";
+import { Image } from 'astro:assets'
 // component import
 import MainLayout from "../../layouts/MainLayout.astro";
 import Link from "../../components/Link.astro";
@@ -20,8 +20,7 @@ interface Props {
   post: CollectionEntry<"blog">;
 }
 const { post } = Astro.props;
-const { title, description, date, category, author, image } = post.data;
-const imageRatio = image.aspect_ratio.x / image.aspect_ratio.y;
+const { title, description, date, category, author, image, imageTitle } = post.data;
 const { Content } = await post.render();
 // const allPosts = await getCollection("blog");
 // const formattedPosts = formatBlogPosts(allPosts, {
@@ -43,7 +42,7 @@ const { Content } = await post.render();
       </div>
     </header>
     <div class="flex justify-center rounded-md overflow-hidden mx-auto p-10 pt-20">
-      <Image class="drop-shadow-lg" src={image.src} alt={image.alt} width={800} height={700 / imageRatio} aspectRatio={imageRatio} format={"avif"} fit={"cover"} title={image.alt} />
+      <img class="drop-shadow-lg" src={image.src} alt={imageTitle} title={imageTitle} transition:name={"img-" + post.slug} />
     </div>
     <div class="flex justify-center sm:px-8 px-16">
       <div class="content prose prose-invert">
