--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,7 +97,7 @@ import MainLayout from "../layouts/MainLayout.astro";
       document.body.appendChild(css);
     };
 
-    document.addEventListener("astro:load", () => {
+    document.addEventListener("astro:page-load", () => {
       typeWrite();
     });
   </script>
