--- a/src/pages/blog/category/[...category].astro
+++ b/src/pages/blog/category/[...category].astro
@@ -32,14 +32,13 @@ const { category } = Astro.params;
 const { posts, categoryName } = Astro.props;
 
 const catPosts = posts.filter((post) => slugify(post.data.category) === category);
+
+
 ---
 
 <MainLayout title={`Posts about ${categoryName}`}>
   <h1 class="mx-auto text-4xl text-center">
     Posts about <span class="grad">{categoryName}</span>
   </h1>
-  {catPosts.map((post) => {
-    post.data.image.src = ("../" + post.data.image.src);
-    <PostCard {post} />
-  })}
+  {posts.map((post) => <PostCard {post} />)}
 </MainLayout>
