--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,8 +96,10 @@ import MainLayout from "../layouts/MainLayout.astro";
       css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
       document.body.appendChild(css);
     };
-
-    typeWrite();
+    const isChromium = (window as any).chrome;
+    if (!isChromium) {
+      typeWrite();
+    }
 
     document.addEventListener("astro:page-load", () => {
       typeWrite();
