Update discord URL

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import MainLayout from "../layouts/MainLayout.astro";
   <!-- Socials & Stuff -->
   <p class="text-center text-xl pt-12"></p>
   <div class="grid grid-flow-col auto-cols-auto justify-center pt-5">
-    <a href="https://discords.com/bio/p/23417904-3b87-3e03-4006-71861549e0b8" target="_blank">
+    <a href="https://discord.com/users/234439833802637312" target="_blank">
       <div class="discord-sprite m-2"></div>
     </a>
 
