--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,7 +103,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 
     document.addEventListener("astro:page-load", () => {
       typeWrite();
-    }, { once: false }});
+    }, { once: false });
 
   </script>
 </MainLayout>
