--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,29 +81,23 @@ import MainLayout from "../layouts/MainLayout.astro";
       }, delta);
     };
 
-    const typeWrite = function () {
-      var elements = document.getElementsByClassName("typewrite");
-      for (var i = 0; i < elements.length; i++) {
-        var toRotate = elements[i].getAttribute("data-type");
-        var period = elements[i].getAttribute("data-period");
-        if (toRotate) {
-          new TxtType(elements[i], JSON.parse(toRotate), period);
+    document.addEventListener("astro:page-load", () => {
+      const typeWrite = function () {
+        var elements = document.getElementsByClassName("typewrite");
+        for (var i = 0; i < elements.length; i++) {
+          var toRotate = elements[i].getAttribute("data-type");
+          var period = elements[i].getAttribute("data-period");
+          if (toRotate) {
+            new TxtType(elements[i], JSON.parse(toRotate), period);
+          }
         }
-      }
-      // INJECT CSS
-      var css = document.createElement("style");
-      css.type = "text/css";
-      css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
-      document.body.appendChild(css);
-    };
-    // const isChromium = (window as any).chrome;
-    // if (!isChromium) {
-    //   typeWrite();
-    // }
-
-    document.addEventListener("astro:after-swap", () => {
+        // INJECT CSS
+        var css = document.createElement("style");
+        css.type = "text/css";
+        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+        document.body.appendChild(css);
+      };
       typeWrite();
     });
-
   </script>
 </MainLayout>
