renamed to ImAdam.io

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -6,10 +6,10 @@ interface Props {
 
 var { 
 	title, 
-	description = `Welcome to Lerndmina.Dev\nI like to make cool web stuff. Come take a look!`
+	description = `Hey I'm Adam\nI like to make cool web stuff. Come take a look!`
 } = Astro.props as Props;
 
-title = `Lerndmina.Dev • ${title}`
+title = `ImAdam.io • ${title}`
 
 
 import '../styles/global.css'
