--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 <MainLayout title="Home">
   <div class="text-center pt-5 text-6xl">
-    <p>👋 I'm <span class="grad">Adam</span>.</p>
+    <p><span title="Hey!">👋</span> I'm <span class="grad">Adam</span>.</p>
     <p class="text-4xl pt-3">A <span class="grad"><span id="age">00</span> year old</span> developer from the UK.</p>
     <p class="text-4xl">
       <type class="typewrite grad" data-period="2000" data-type='[ "I Make Webites", "I Maintain Servers", "I Write Discord Bots" ]'></type><noscript class="grad"
