Changed header logo

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,7 +6,7 @@ import Link from "./Link.astro";
 
 <div id="content-wrap" class="px-1 pb-10" transition:name="nav">
     <div class="block mr-auto ml-1 h-auto font-sans text-xl font-normal">
-      <Link href="/" text="&lt;/Lerndmina.Dev&gt;" extraclasses="from-gradient1 to-gradient2 font-bold"/>
+      <Link href="/" text="&lt;/ImAdam.io&gt;" extraclasses="from-gradient1 to-gradient2 font-bold"/>
     </div>
     <div class="font-sans text-center text-2xl md:text-3xl text-notwhite">
 
