Changed email and footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,7 +19,7 @@ var today = yyyy + "/" + mm + "/" + dd;
     >
   </p>
   <p class="font-semibold">
-    <Link href="https://lerndmina.dev" text="Lerndmina.Dev" /> | Copyright &copy; <span id="copyright"></span> | All rights reserved
+    <Link href="https://imadam.io" text="ImAdam.io" /> | Copyright &copy; <span id="copyright"></span> | All rights reserved
   </p>
   <p class="text-xs">
     Built using <Link href="https://astro.build" text="AstroJS" /> 🚀 & <Link href="https://tailwindcss.com" text="TailwindCSS" />| Last updated {today}
