--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -11,7 +11,7 @@ import MainLayout from "../layouts/MainLayout.astro";
   <div class="text-center pt-5 text-notwhite text-3xl">
     Come say hi!
     <div class="md:container md:mx-auto">
-    <p class="text-2xl pt-5">I can provide Systems Administration and Technical Support for individuals and companies. <br> You can <a class="font-bold" href="mailto:adam@lerndmina.dev">contact me</a> for more details or just to chat.</p>
+    <p class="text-2xl pt-5">Do you like what I do or want to contact me? <br> You can <a class="grad" href="mailto:adam@lerndmina.dev">click here</a> to send me an email.</p>
     </div>
     <div class="grid grid-flow-col auto-cols-auto justify-center pt-5">
       <a href="mailto:adam@lerndmina.dev" target="_blank">
