--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,12 +11,9 @@ var today = yyyy + "/" + mm + "/" + dd;
 
 <footer class="sticky top-[100vh] py-10 text-center min-w-full text-md md:text-lg">
   <p>
-    <noscript class="font-bold text-red-500 text-xl"
-      >Javascript is disabled, you may face errors or strangeness. <a
-        href="hhttps://support.clio.com/hc/en-us/articles/360040902634-How-to-Enable-JavaScript-in-Your-Web-Browser"
-        class="font-bold text-red-500">Enable it here.</a
-      ></noscript
-    >
+    <noscript class="font-bold text-xl">Javascript is disabled, you may face errors or strangeness. 
+      <a href="https://www.enable-javascript.com"
+        class="font-bold grad">Enable it here.</a></noscript>
   </p>
   <p class="font-semibold">
     <Link href="https://imadam.io" text="ImAdam.io" /> | Copyright &copy; <span id="copyright"></span> | All rights reserved
