--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,10 +10,10 @@ import MainLayout from "../layouts/MainLayout.astro";
 <MainLayout title="Home">
   <div class="text-center pt-5 text-6xl">
     <p><span title="Hey!">👋</span> I'm <span class="grad">Adam</span>.</p>
-    <p class="text-4xl pt-3">A <span class="grad"><span id="age">00</span> year old</span> developer from the UK.</p>
-    <p class="text-4xl">
-      <type class="typewrite grad" data-period="2000" data-type='[ "I Make Websites", "I Maintain Servers", "I Write Discord Bots" ]'></type><noscript class="grad"
-        >I make Websites <i class="grad">ps, your javascript is disabled.</i></noscript
+    <p class="text-4xl pt-3">A <span class="grad"><span id="age">23</span> year old</span> developer from the UK.</p>
+    <p class="text-3xl">
+      <type class="typewrite grad" data-period="2000" data-type='[ "I Make Websites", "I Maintain Servers", "I Write Discord Bots", "I write code in HTML CSS JS TS Java & C#" ]'></type><noscript class="grad"
+        >I make Websites, Discord bots & write code in JS / TS</noscript
       >
     </p>
 
