--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 <MainLayout title="Home">
   <div class="text-center pt-5 text-6xl">
     <p><span title="Hey!">👋</span> I'm <span class="grad">Adam</span>.</p>
-    <p class="text-4xl pt-3">A <span class="grad"><span id="age">23</span> year old</span> developer from the UK.</p>
+    <p class="text-4xl pt-3">I'm a <span class="grad"><span id="age">23</span> year old</span> developer from the UK.</p>
     <p class="text-3xl">
       <type class="typewrite grad" data-period="2000" data-type='[ "I Make Websites", "I Maintain Servers", "I Write Discord Bots", "I write code in HTML CSS JS TS Java & C#" ]'></type><noscript class="grad"
         >I make Websites, Discord bots & write code in JS / TS</noscript
@@ -18,7 +18,7 @@ import MainLayout from "../layouts/MainLayout.astro";
     </p>
 
     <p class="text-base pt-12">
-      Click on the <span class="grad"><b>icons</b></span> below to learn more about me.
+      Click on the <span class="grad"><b>icons</b></span> below to visit my little corners of the internet.
     </p>
   </div>
   <!-- Socials & Stuff -->
@@ -39,7 +39,7 @@ import MainLayout from "../layouts/MainLayout.astro";
     <a href="https://github.com/lerndmina" target="_blank">
       <div class="github-sprite m-2" title="Github (See what I've been up to)"></div>
     </a>
-    <a href="mailto:adam@lerndmina.dev" target="_new">
+    <a href="mailto:hey@imadam.io" target="_new">
       <div class="email-sprite m-2" title="Email Me!"></div>
     </a>
   </div>
