Added better viewtransitions explanation

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,7 +21,7 @@ var today = yyyy + "/" + mm + "/" + dd;
   <p class="text-xs">
     Built using <Link href="https://astro.build" text="AstroJS" /> 🚀 & <Link href="https://tailwindcss.com" text="TailwindCSS" />| Last updated {today}
   </p>
-  <p id="chrome-check" class="text-xs invisible">This site is best viewed in a chromium based browser</p>
+  <p id="chrome-check" class="text-xs invisible max-w-sm text-center mx-auto"><br /> This site is best viewed in a chromium browser due to our use of the ViewTransitions API for seamless page navigation<br /><i><Link href="https://caniuse.com/mdn-api_viewtransition" text="Click me to learn why"></i></p>
 </footer>
 
 <script>
