--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,22 +19,40 @@ var today = yyyy + "/" + mm + "/" + dd;
     <Link href="https://imadam.io" text="ImAdam.io" /> | Copyright &copy; <span id="copyright"></span> | All rights reserved
   </p>
   <p class="text-xs">
-    Built using <Link href="https://astro.build" text="AstroJS" /> 🚀 & <Link href="https://tailwindcss.com" text="TailwindCSS" />| Last updated {today}
+    Built using <Link href="https://astro.build" text="AstroJS"/> 🚀 & <Link href="https://tailwindcss.com" text="TailwindCSS"/>| Last updated {today}
   </p>
-  <p id="chrome-check" class="text-xs invisible max-w-sm text-center mx-auto"><br /> This site is best viewed in a chromium browser due to our use of the ViewTransitions API for seamless page navigation<br /><i><Link href="https://caniuse.com/mdn-api_viewtransition" text="Click me to learn why"></i></p>
+  <p id="chrome-check" class="text-xs hidden max-w-sm text-center mx-auto"><br /> This site is best viewed in a chromium browser due to my use of <Link href="https://caniuse.com/mdn-api_viewtransition" text="ViewTransitions" extraclasses="font-bold"/> for seamless page navigation. During the next page refresh I will hide this message until the browser is closed. :)</p>
 </footer>
 
 <script>
   const isChromium = (window as any).chrome;
   const hasTouchScreen = window.matchMedia("(hover: none)").matches;
+  function isChrome() {
+    if (!isChromium && !hasTouchScreen) {
+      // not chrome
+      // Edit chrome-check element
+      const userHasSeenKey = "userHasSeenChromeCheck";
+      const userHasSeen = sessionStorage.getItem(userHasSeenKey);
+      const isLocalhost = window.location.hostname === "localhost"
 
-  if (!isChromium && !hasTouchScreen) {
-    // not chrome
-    // Edit chrome-check element
+      if (userHasSeen && !isLocalhost) {
+        return;
+      }
+      
+      sessionStorage.setItem(userHasSeenKey, "true");
 
-    const chromeCheck = document.querySelector("#chrome-check")!;
-    chromeCheck.classList.remove("invisible");
+      const chromeCheck = document.querySelector("#chrome-check")!;
+      chromeCheck.classList.remove("hidden");
+    }
   }
+
+  document.addEventListener("astro:page-load", () => {
+    isChrome();
+  }, { once: true });
+
+  document.addEventListener("astro:after-swap", () => {
+    isChrome();
+  });
 </script>
 
 <script>
