--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,13 @@ import MainLayout from "../layouts/MainLayout.astro";
 
 <MainLayout title="Home">
   <div class="text-center pt-5 text-6xl">
-    <p><span title="Hey!">👋</span> I'm <span class="grad">Adam</span>.</p>
-    <p class="text-4xl pt-3">I'm a <span class="grad"><span id="age">23</span> year old</span> developer from the UK.</p>
-    <p class="text-3xl">
-      <type class="typewrite grad" data-period="2000" data-type='[ "I Make Websites", "I Maintain Servers", "I Write Discord Bots", "I write code in HTML CSS JS TS Java & C#" ]'></type><noscript class="grad"
+    <h1><span title="Hey!">👋</span> I'm <span class="grad">Adam</span>.</h1>
+    <h2 class="text-4xl pt-3">I'm a <span class="grad"><span id="age">23</span> year old</span> developer from the UK.</h2>
+    <h3 class="text-3xl">
+      <type class="typewrite grad" data-period="2000" data-type='[ "I Make Websites", "I Maintain Servers", "I Write Discord Bots", "I write code for fun" ]'></type><noscript class="grad"
         >I make Websites, Discord bots & write code in JS / TS</noscript
       >
-    </p>
+    </h3>
 
     <p class="text-base pt-12">
       Click on the <span class="grad"><b>icons</b></span> below to visit my little corners of the internet.
@@ -24,24 +24,21 @@ import MainLayout from "../layouts/MainLayout.astro";
   <!-- Socials & Stuff -->
   <p class="text-center text-xl"></p>
   <div class="grid grid-flow-col auto-cols-auto justify-center pt-5">
-    <a href="https://discord.com/users/234439833802637312" target="_blank">
-      <div class="discord-sprite m-2" title="My Discord"></div>
-    </a>
-
-    <a href="https://www.linkedin.com/in/adambolton53/" target="_blank">
-      <div class="linkedin-sprite m-2" title="Linkedin"></div>
-    </a>
-
-    <a href="https://www.reddit.com/user/AWildLerndmina" target="_blank">
-      <div class="reddit-sprite m-2" title="Reddit"></div>
-    </a>
-
     <a href="https://github.com/lerndmina" target="_blank">
       <div class="github-sprite m-2" title="Github (See what I've been up to)"></div>
     </a>
-    <a href="mailto:hey@imadam.io" target="_new">
-      <div class="email-sprite m-2" title="Email Me!"></div>
+    <a href="https://discord.com/users/234439833802637312" target="_blank">
+      <div class="discord-sprite m-2" title="My Discord"></div>
     </a>
+    <!-- <a href="https://www.linkedin.com/in/adambolton53/" target="_blank">
+      <div class="linkedin-sprite m-2" title="Linkedin"></div>
+    </a> -->
+    <a href="https://www.reddit.com/user/AWildLerndmina" target="_blank">
+      <div class="reddit-sprite m-2" title="Reddit"></div>
+    </a>
+    <!-- <a href="mailto:hey@imadam.io" target="_new">
+      <div class="email-sprite m-2" title="Email Me!"></div>
+    </a> -->
   </div>
   <script>
     var TxtType = function (el, toRotate, period) {
@@ -54,10 +51,11 @@ import MainLayout from "../layouts/MainLayout.astro";
       this.isDeleting = false;
     };
 
-    function calculateAge(birthday) { // birthday is a date
-    var ageDifMs = Date.now() - birthday;
-    var ageDate = new Date(ageDifMs); // miliseconds from epoch
-    return Math.abs(ageDate.getUTCFullYear() - 1970);
+    function calculateAge(birthday) {
+      // birthday is a date
+      var ageDifMs = Date.now() - birthday;
+      var ageDate = new Date(ageDifMs); // miliseconds from epoch
+      return Math.abs(ageDate.getUTCFullYear() - 1970);
     }
 
     TxtType.prototype.tick = function () {
@@ -94,37 +92,42 @@ import MainLayout from "../layouts/MainLayout.astro";
     };
 
     const typeWrite = function () {
-    var elements = document.getElementsByClassName("typewrite");
-    for (var i = 0; i < elements.length; i++) {
-      var toRotate = elements[i].getAttribute("data-type");
-      var period = elements[i].getAttribute("data-period");
-      if (toRotate) {
-        var array = JSON.parse(toRotate);
-        array = array.sort((a: string, b: string) => 0.5 - Math.random());
-        new TxtType(elements[i], array, period);
+      var elements = document.getElementsByClassName("typewrite");
+      for (var i = 0; i < elements.length; i++) {
+        var toRotate = elements[i].getAttribute("data-type");
+        var period = elements[i].getAttribute("data-period");
+        if (toRotate) {
+          var array = JSON.parse(toRotate);
+          array = array.sort((a: string, b: string) => 0.5 - Math.random());
+          new TxtType(elements[i], array, period);
+        }
       }
+      // INJECT CSS
+      var css = document.createElement("style");
+      css.type = "text/css";
+      css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+      document.body.appendChild(css);
+    };
+
+    // This is a hack to make sure the typewriter effect works on the first page load and after a page swap.
+    // It's so fucking dumb, there's probably a better way but it's 5am and I'm tired.
+    document.addEventListener(
+      "astro:page-load",
+      () => {
+        typeWrite();
+      },
+      { once: true }
+    );
+
+    document.addEventListener("astro:after-swap", () => {
+      typeWrite();
+    });
+
+    const ageElement = document.getElementById("age");
+    if (ageElement) {
+      var date = new Date("2000-04-04");
+      ageElement.innerHTML = calculateAge(date).toString();
     }
-    // INJECT CSS
-    var css = document.createElement("style");
-    css.type = "text/css";
-    css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
-    document.body.appendChild(css);
-  };
 
-  // This is a hack to make sure the typewriter effect works on the first page load and after a page swap.
-  // It's so fucking dumb, there's probably a better way but it's 5am and I'm tired.
-  document.addEventListener("astro:page-load", () => {
-    typeWrite();
-  }, { once: true });
-
-  document.addEventListener("astro:after-swap", () => {
-    typeWrite();
-  });
-
-  const ageElement = document.getElementById("age");
-  if (ageElement){
-    var date = new Date("2000-04-04")
-    ageElement.innerHTML = calculateAge(date).toString()
-  }
   </script>
 </MainLayout>
