--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -2,7 +2,7 @@
 import PostCard from "../../components/PostCard.astro";
 import { formatBlogPosts } from "../../js/utils";
 import MainLayout from "../../layouts/MainLayout.astro";
-import { getCollection, CollectionEntry } from "astro:content";
+import { getCollection, type CollectionEntry } from "astro:content";
 import Pagination from "../../components/Pagination.astro";
 
 export async function getStaticPaths({ paginate }) {
