--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -22,15 +22,15 @@ import { ViewTransitions } from "astro:transitions";
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content={title} />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://lerndmina.dev/" />
+  <meta property="og:url" content="https://imadam.io/" />
   <meta property="og:description" content={description} />
   <meta property="og:image" content="/assets/img/logos/logo-name-bottom-min-transparent.png" />
-  <meta property="og:site_name" content="Lerndmina.Dev" />
+  <meta property="og:site_name" content="ImAdam.io" />
 
   <!-- Twitter -->
   <meta property="twitter:title" content={title} />
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://lerndmina.dev/" />
+  <meta property="twitter:url" content="https://imadam.io/" />
   <meta property="twitter:description" content={description} />
   <meta property="twitter:image" content="/assets/img/logos/logo-name-bottom-min-transparent.png" />
   <title>{title}</title>
