Testing build system from vscode.dev

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,7 @@ import { Prism } from '@astrojs/prism';
 
     <p class="text-base pt-12">
       Click on the <span class="grad"><b>icons</b></span> below to visit my little corners of the internet.
+      Testing 123
     </p>
   </div>
   <!-- Socials & Stuff -->
