--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import PostCard from "../../components/PostCard.astro";
 import { formatBlogPosts } from "../../js/utils";
 import MainLayout from "../../layouts/MainLayout.astro";
