--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import { getCollection, type CollectionEntry } from "astro:content";
 import { Image } from 'astro:assets'
 // component import
