--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,7 +31,7 @@ if (!isProd) {
     <Link href="https://imadam.io" text="ImAdam.io" /> | Copyright &copy; <span id="copyright"></span> | All rights reserved
   </p>
   <p class="text-xs">
-    Built using <Link href="https://astro.build" text="AstroJS"/> 🚀 & <Link href="https://tailwindcss.com" text="TailwindCSS"/>| Last updated {today}
+    Built using <Link href="https://astro.build" text="AstroJS"/> 🚀 & <Link href="https://tailwindcss.com" text="TailwindCSS"/> | <Link href="https://status.imadam.io" text="Check out my status page"/> | Last updated {today}
   </p>
   <p id="chrome-check" class="text-xs hidden max-w-sm text-center mx-auto"><br /> This site is best viewed in a chromium browser due to my use of <Link href="https://caniuse.com/mdn-api_viewtransition" text="ViewTransitions" extraclasses="font-bold"/> for seamless page navigation. During the next page refresh I will hide this message until the browser is closed. :)</p>
 </footer>
