--- a/src/pages/account/login.astro
+++ b/src/pages/account/login.astro
@@ -3,8 +3,11 @@ import MainLayout from "../../layouts/MainLayout.astro";
 import Link from "../../components/Link.astro";
 
 const url = import.meta.env.DISCORD_OAUTH_URL;
+import { Icon } from "astro-icon/components";
 ---
 
 <MainLayout title="Login">
-  <Link href={url} text="Login?" popup={true} />
+  <div class="text-center">
+    <Icon name="ic:baseline-discord" size={50} />
+  </div>
 </MainLayout>
